syntax = "proto3";

package giftduels.event.v1;

import "giftduels/duel/v1/event.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/event/v1;eventv1";

// Универсальный Event-сервис. Клиент открывает один bidi-stream,
// а сервер шлёт туда всё подряд: баланс, онлайн, игровые и т.д.
service EventPublicService {
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc Socket(stream google.protobuf.Empty) returns (stream SocketResponse);
}

message SocketResponse {
  oneof payload {
    OnlineCountEvent online_count = 1;
    giftduels.duel.v1.DuelEvent duel_event = 100;
  }
}

message OnlineCountEvent {
  int32 online_count = 1;
}
